--- a/styles/headline.css
+++ b/styles/headline.css
@@ -1,18 +1,119 @@
 .headline {
-    display: flex;
-  position: relative;
-  width: 1140px;
-  margin: auto;
-  margin-top: 84px ;
-  padding-bottom: 77px;
+  margin: 0;
+  width: 100%;
 }
-
 
 .headline__content {
-    position: absolute;
-   
-    z-index: 1;
+  margin: 35px 15px 33px 15px;
 }
+
+.headline__title {
+  font-weight: 700;
+  font-size: 50px;
+  line-height: 50px;
+  letter-spacing: -0.3125px;
+}
+
+.headline__description {
+  margin-top: 24px;
+  margin-bottom: 0;
+  width: 290px;
+  height: 172px;
+  font-size: 24px;
+  line-height: 34px;
+  color: #2b292d;
+  z-index: 1;
+}
+
+.headline__actions {
+  display: flex;
+  flex-direction: column;
+  margin-top: 30px;
+}
+
+
+
+.headline__learn-more-button {
+  background-color: #fff;
+  color: #3040c4;
+  width: 158px;
+  height: 48px;
+  font-size: 18px;
+  font-weight: 700;
+  border: none;
+  border-radius: 2px;
+  margin-top: 15px;
+}
+
+
+.headline__banner {
+  width: 100%;
+  margin-bottom: 36px;
+}
+
+
+
+
+@media screen and (max-width: 399px) {
+  .headline__action-button {
+  width: 100%;
+}
+.action-button {
+  width: 100%;
+}
+
+
+}
+@media screen and (min-width: 400px) {
+  .headline {
+    display: flex;
+    position: relative;
+    width: 1140px;
+    margin: auto;
+    margin-top: 84px;
+    padding-bottom: 77px;
+  }
+
+  .headline__content {
+    position: absolute;
+    margin: 0;
+    z-index: 1;
+  }
+
+  .headline__title {
+    width: 754px;
+    height: 165px;
+    margin: 0;
+    font-weight: 700;
+    font-size: 80px;
+    line-height: 78px;
+    letter-spacing: -0.5px;
+    color: #2b292d;
+    z-index: 1;
+  }
+
+  .headline__description {
+    margin-top: 34px;
+    margin-bottom: 0;
+    height: 102px;
+    width: 456px;
+    font-size: 24px;
+    line-height: 34px;
+    color: #2b292d;
+    z-index: 1;
+  }
+
+  .headline__actions {
+    margin-top: 58px;
+    display: flex;
+    flex-direction: row;
+  }
+
+  .headline__learn-more-button {
+    margin-left: 10px;
+    margin-top: 0;
+  }
+
 
 .headline__banner {
   position: relative;
@@ -21,47 +122,8 @@
   width: 796px;
   height: 448px;
   margin-left: auto;
-
+}
 
 }
 
-.headline__title {
-  width: 754px;
-  height: 165px;
-  font-weight: 700;
-  font-size: 80px;
-  line-height: 78px;
-  letter-spacing: -0.5px;
-  color: #2b292d;
-  z-index: 1;
-   margin: 0;
-}
 
-.headline__description {
-  margin-top: 34px;
-  margin-bottom: 0;
-  height: 102px;
-  width: 456px;
-  font-size: 24px;
-  line-height: 34px;
-  color: #2b292d;
-    z-index: 1;
-}
-
-
-.headline__actions {
-    margin-top: 58px;
-    display: flex;
-}
-
-.headline__learn-more-button {
-    margin-left: 10px;
-      background-color: #fff; 
-  color:#3040c4;
-  width: 158px;
-  height: 48px;
-  font-size: 18px;
-  font-weight: 700;
-  border: none;
-  border-radius: 2px;
-}
