--- a/styles/common.css
+++ b/styles/common.css
@@ -1,10 +1,17 @@
-.action-button {
-  background-color: #3040c4;
+.action-button  {
+   background-color: #3040c4;
   color: #fff;
-  width: 160px;
+  width: 100%;
   height: 48px;
   font-size: 18px;
   font-weight: 700;
   border: none;
   border-radius: 2px;
 }
+@media screen and (min-width: 400px) {
+  .action-button {
+   width: 160px;
+}
+}
+
+
