--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1,3 +1,12 @@
+@import 'common.scss';
+@import 'footer.scss';
+@import 'header.scss';
+@import 'headline.scss';
+@import 'breakpoints.scss';
+@import 'variables.scss';
+@import 'order.scss';
+
+
 * {
   box-sizing: border-box;
 }
@@ -5,7 +14,7 @@
 html {
   font-size: 16px;
   font-family: 'Work Sans', sans-serif;
-  color: #2B292D;
+  color: $main-font-color;
 }
 
 .page {
@@ -14,12 +23,16 @@ html {
 }
 
 
-@media screen and (min-width: 400px) {
  .page {
+    @include for-large-up {
   display: flex;
   flex-direction: column;
   width: 1400px;
   margin: auto;
   min-height: 100vh;
-} 
-}
+  }
+
+ }
+
+
+
