--- a/style.css
+++ b/style.css
@@ -12,19 +12,19 @@
 .action-button {
   width: 100%;
 }
-@media screen and (min-width: 400px) {
+@media screen and (min-width: 1400px) {
   .action-button {
     width: 160px;
   }
 }
 
-@media screen and (min-width: 400px) {
+@media screen and (min-width: 1400px) {
   .hide-desktop {
     display: none;
   }
 }
 
-@media screen and (max-width: 399px) {
+@media screen and (max-width: 1399px) {
   .hide-mobile {
     display: none;
   }
@@ -43,7 +43,7 @@
   margin-top: 30px;
   color: rgba(43, 41, 45, 0.6);
 }
-@media screen and (min-width: 400px) {
+@media screen and (min-width: 1400px) {
   .footer__description {
     display: block;
     width: 360px;
@@ -56,12 +56,12 @@
   margin: 0;
   margin-top: 40px;
 }
-@media screen and (min-width: 400px) {
+@media screen and (min-width: 1400px) {
   .footer__line {
     margin: 0;
   }
 }
-@media screen and (max-width: 399px) {
+@media screen and (max-width: 1399px) {
   .footer .logo {
     display: none;
   }
@@ -76,7 +76,7 @@
   flex-direction: column;
   margin: 0;
 }
-@media screen and (min-width: 400px) {
+@media screen and (min-width: 1400px) {
   .footer-navigation {
     display: flex;
     flex-direction: row;
@@ -91,7 +91,7 @@
   justify-content: center;
   margin: 31px 15px 0px 15px;
 }
-@media screen and (min-width: 400px) {
+@media screen and (min-width: 1400px) {
   .downloads {
     display: block;
     margin: 0;
@@ -108,7 +108,7 @@
   margin-left: 15px;
   margin-right: 15px;
 }
-@media screen and (min-width: 400px) {
+@media screen and (min-width: 1400px) {
   .additional-navigation {
     display: flex;
     flex-direction: row;
@@ -119,7 +119,7 @@
 .additional-navigation__column {
   margin-top: 30px;
 }
-@media screen and (min-width: 400px) {
+@media screen and (min-width: 1400px) {
   .additional-navigation__column {
     margin-top: 0;
     margin-right: 29px;
@@ -154,7 +154,7 @@
   margin-left: 15px;
   color: rgb(43, 41, 45);
 }
-@media screen and (min-width: 400px) {
+@media screen and (min-width: 1400px) {
   .footer-links {
     height: 50px;
     flex-direction: row;
@@ -169,7 +169,7 @@
   font-size: 14px;
   margin-top: 30px;
 }
-@media screen and (min-width: 400px) {
+@media screen and (min-width: 1400px) {
   .terms {
     line-height: 50px;
     margin: 0;
@@ -180,7 +180,7 @@
   margin-right: 22px;
   color: rgba(43, 41, 45, 0.6);
 }
-@media screen and (min-width: 400px) {
+@media screen and (min-width: 1400px) {
   .terms__items {
     text-decoration: none;
   }
@@ -190,7 +190,7 @@
   margin-top: 31px;
   margin-bottom: 22px;
 }
-@media screen and (min-width: 400px) {
+@media screen and (min-width: 1400px) {
   .social-links {
     margin-left: auto;
   }
@@ -204,7 +204,7 @@
   flex-direction: column;
   align-items: center;
 }
-@media screen and (min-width: 400px) {
+@media screen and (min-width: 1400px) {
   .logo-vertical {
     display: none;
   }
@@ -226,7 +226,7 @@
   color: rgba(43, 41, 45, 0.6);
 }
 
-@media screen and (min-width: 400px) {
+@media screen and (min-width: 1400px) {
   .footer-links {
     display: flex;
     flex-direction: row;
@@ -245,7 +245,7 @@
   background-color: #fff;
   padding-left: 15px;
 }
-@media screen and (min-width: 400px) {
+@media screen and (min-width: 1400px) {
   .header {
     display: flex;
     width: 1140px;
@@ -257,7 +257,7 @@
 .header__button {
   display: none;
 }
-@media screen and (min-width: 400px) {
+@media screen and (min-width: 1400px) {
   .header__button {
     display: block;
   }
@@ -270,7 +270,7 @@
   margin-left: auto;
   background-color: transparent;
 }
-@media screen and (min-width: 400px) {
+@media screen and (min-width: 1400px) {
   .header__menu-button {
     display: none;
   }
@@ -288,7 +288,7 @@
 .logo__description {
   display: none;
 }
-@media screen and (min-width: 400px) {
+@media screen and (min-width: 1400px) {
   .logo__description {
     display: block;
     font-size: 18px;
@@ -302,7 +302,7 @@
   height: 48px;
   margin-right: 13px;
 }
-@media screen and (min-width: 400px) {
+@media screen and (min-width: 1400px) {
   .logo__image {
     width: 60px;
     height: 60px;
@@ -324,7 +324,7 @@
 .navigation {
   display: none;
 }
-@media screen and (min-width: 400px) {
+@media screen and (min-width: 1400px) {
   .navigation {
     display: block;
     margin-left: auto;
@@ -332,7 +332,7 @@
     margin-right: 75px;
   }
 }
-@media screen and (min-width: 400px) {
+@media screen and (min-width: 1400px) {
   .navigation__item {
     color: #2b292d;
     text-decoration: none;
@@ -341,17 +341,17 @@
     margin-left: 50px;
   }
 }
-@media screen and (min-width: 400px) {
+@media screen and (min-width: 1400px) {
   .navigation__item_selected {
     font-weight: 700;
   }
 }
-@media screen and (min-width: 400px) {
+@media screen and (min-width: 1400px) {
   .navigation__item:last-child {
     margin-right: 0;
   }
 }
-@media screen and (min-width: 400px) {
+@media screen and (min-width: 1400px) {
   .navigation__arrow {
     display: inline-block;
     margin-left: 11px;
@@ -365,7 +365,7 @@
   background-color: #f3c6bd;
   padding-bottom: 35px;
 }
-@media screen and (min-width: 400px) {
+@media screen and (min-width: 1400px) {
   .top-section {
     padding-top: 39px;
   }
@@ -375,7 +375,7 @@
   margin: 0;
   width: 100%;
 }
-@media screen and (min-width: 400px) {
+@media screen and (min-width: 1400px) {
   .headline {
     display: flex;
     position: relative;
@@ -388,7 +388,7 @@
 .headline__content {
   margin: 35px 15px 33px 15px;
 }
-@media screen and (min-width: 400px) {
+@media screen and (min-width: 1400px) {
   .headline__content {
     position: absolute;
     margin: 0;
@@ -401,7 +401,7 @@
   line-height: 50px;
   letter-spacing: -0.3125px;
 }
-@media screen and (min-width: 400px) {
+@media screen and (min-width: 1400px) {
   .headline__title {
     width: 754px;
     height: 165px;
@@ -423,7 +423,7 @@
   color: #2b292d;
   z-index: 1;
 }
-@media screen and (min-width: 400px) {
+@media screen and (min-width: 1400px) {
   .headline__description {
     margin-top: 34px;
     margin-bottom: 0;
@@ -439,7 +439,7 @@
   flex-direction: column;
   margin-top: 30px;
 }
-@media screen and (min-width: 400px) {
+@media screen and (min-width: 1400px) {
   .headline__actions {
     margin-top: 58px;
     display: flex;
@@ -457,7 +457,7 @@
   border-radius: 2px;
   margin-top: 15px;
 }
-@media screen and (min-width: 400px) {
+@media screen and (min-width: 1400px) {
   .headline__learn-more-button {
     margin-left: 10px;
     margin-top: 0;
@@ -467,7 +467,7 @@
   width: 100%;
   margin-bottom: 36px;
 }
-@media screen and (min-width: 400px) {
+@media screen and (min-width: 1400px) {
   .headline__banner {
     position: relative;
     right: -105px;
@@ -477,13 +477,13 @@
     margin-left: auto;
   }
 }
-@media screen and (max-width: 399px) {
+@media screen and (max-width: 1399px) {
   .headline__action-button {
     width: 100%;
   }
 }
 
-@media screen and (max-width: 399px) {
+@media screen and (max-width: 1399px) {
   .action-button {
     width: 100%;
   }
@@ -493,7 +493,7 @@
   background-color: #f4f5f7;
   padding: 50px 15px;
 }
-@media screen and (min-width: 400px) {
+@media screen and (min-width: 1400px) {
   .order {
     display: flex;
     justify-content: center;
@@ -508,7 +508,7 @@
   margin-left: 35px;
   max-width: 200px;
 }
-@media screen and (min-width: 400px) {
+@media screen and (min-width: 1400px) {
   .order__illustration {
     max-width: 269px;
     margin: 0;
@@ -522,7 +522,7 @@
   line-height: 40px;
   letter-spacing: -0.25px;
 }
-@media screen and (min-width: 400px) {
+@media screen and (min-width: 1400px) {
   .order__title {
     height: 48px;
     margin-bottom: 12px;
@@ -534,7 +534,7 @@
   font-size: 22px;
   line-height: 32px;
 }
-@media screen and (min-width: 400px) {
+@media screen and (min-width: 1400px) {
   .order__form {
     display: flex;
     margin-top: 26px;
@@ -551,7 +551,7 @@
   line-height: 13px;
   text-align: center;
 }
-@media screen and (min-width: 400px) {
+@media screen and (min-width: 1400px) {
   .order__email {
     margin-top: 0;
   }
@@ -562,12 +562,12 @@
 .order__button {
   margin-top: 12px;
 }
-@media screen and (max-width: 399px) {
+@media screen and (max-width: 1399px) {
   .order__button {
     width: 100%;
   }
 }
-@media screen and (min-width: 400px) {
+@media screen and (min-width: 1400px) {
   .order__button {
     margin-top: 0;
     margin-left: 10px;
@@ -580,7 +580,7 @@
   line-height: 22px;
   color: rgba(43, 41, 45, 0.6);
 }
-@media screen and (min-width: 400px) {
+@media screen and (min-width: 1400px) {
   .order__terms {
     padding: 0;
     margin: 0;
@@ -589,6 +589,131 @@
 }
 .order__terms-link {
   color: #3142c6;
+}
+
+.audience {
+  background-color: rgba(0, 161, 198, 0.07);
+  padding: 50px 15px;
+}
+@media screen and (min-width: 1400px) {
+  .audience {
+    background-color: rgba(0, 161, 198, 0.07);
+    margin: auto;
+    padding: 0;
+    width: 100%;
+  }
+}
+@media screen and (min-width: 1400px) {
+  .audience__details {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    max-width: 555px;
+    margin: 108px auto 0 auto;
+  }
+}
+.audience__title {
+  margin: 0;
+  font-weight: 700;
+  font-size: 22px;
+  line-height: 34px;
+  text-align: center;
+}
+.audience__subtitle {
+  margin: 0;
+  margin-top: 17px;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 40px;
+  text-align: center;
+  letter-spacing: -0.357143px;
+}
+@media screen and (min-width: 1400px) {
+  .audience__subtitle {
+    font-size: 56px;
+    margin-top: 24px;
+    line-height: 56px;
+    letter-spacing: -0.5px;
+  }
+}
+.audience__description {
+  margin: 0;
+  margin-top: 18px;
+  font-size: 24px;
+  line-height: 34px;
+  text-align: center;
+}
+@media screen and (min-width: 1400px) {
+  .audience__description {
+    margin-top: 30px;
+  }
+}
+.audience__buttons {
+  padding: 0;
+}
+@media screen and (max-width: 1399px) {
+  .audience__buttons {
+    width: 100%;
+  }
+}
+.audience__learn-more-button {
+  background-color: #fff;
+  color: #000000;
+  width: 100%;
+  height: 48px;
+  font-size: 18px;
+  font-weight: 700;
+  border-radius: 2px;
+  border: none;
+  margin-top: 12px;
+  margin-bottom: 40px;
+}
+@media screen and (min-width: 1400px) {
+  .audience__learn-more-button {
+    margin-left: 10px;
+    width: 158px;
+  }
+}
+@media screen and (min-width: 1400px) {
+  .audience__users-card {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 111px;
+    margin-bottom: 110px;
+  }
+}
+
+.user-card {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #fff;
+  width: 290px;
+  height: 300px;
+  margin-top: 15px;
+  border-radius: 8px;
+}
+@media screen and (min-width: 1400px) {
+  .user-card {
+    width: 262px;
+    margin: 0;
+    margin-right: 30px;
+    cursor: pointer;
+  }
+}
+.user-card:hover {
+  background-color: #3141C5;
+  box-shadow: 0px 13px 18px rgba(0, 0, 0, 0.15), 0px 11px 55px rgba(0, 0, 0, 0.07);
+}
+.user-card__caption {
+  font-weight: 700;
+  font-size: 22px;
+  line-height: 28px;
+  text-align: center;
+}
+.user-card:hover .user-card__caption {
+  color: #fff;
 }
 
 * {
@@ -606,7 +731,7 @@ html {
   overflow-x: hidden;
 }
 
-@media screen and (min-width: 400px) {
+@media screen and (min-width: 1400px) {
   .page {
     display: flex;
     flex-direction: column;
