--- a/styles/breakpoints.scss
+++ b/styles/breakpoints.scss
@@ -1,5 +1,5 @@
-$lg: 400px;
-$min-large: 399px;
+$lg: 1400px;
+$max-large: 1399px;
 
 
 @mixin for-large-up {
@@ -9,7 +9,7 @@ $min-large: 399px;
 }
 
 @mixin for-down-up {
-    @media screen and (max-width: $min-large) {
+    @media screen and (max-width: $max-large) {
         @content;
     }
 }
