--- a/style.css
+++ b/style.css
@@ -654,6 +654,12 @@
 @media screen and (max-width: 1399px) {
   .audience__buttons {
     width: 100%;
+    margin-top: 30px;
+  }
+}
+@media screen and (min-width: 1400px) {
+  .audience__buttons {
+    margin-top: 34px;
   }
 }
 .audience__learn-more-button {
