--- a/styles/audience.scss
+++ b/styles/audience.scss
@@ -61,8 +61,14 @@ text-align: center;
 
 &__buttons {
     padding: 0;
+    
     @include for-down-up {
         width: 100%;
+        margin-top: 30px;
+    }
+
+    @include for-large-up  {
+        margin-top: 34px;
     }
 }
 
