--- a/style.css
+++ b/style.css
@@ -714,6 +714,7 @@
   font-weight: 700;
   font-size: 22px;
   line-height: 28px;
+  margin-top: 22px;
   text-align: center;
 }
 .user-card:hover .user-card__caption {
