--- a/styles/audience.scss
+++ b/styles/audience.scss
@@ -129,6 +129,7 @@ text-align: center;
     font-weight: 700;
     font-size: 22px;
     line-height: 28px;
+    margin-top: 22px;
     text-align: center;
 }
 
