--- a/styles/audience.scss
+++ b/styles/audience.scss
@@ -6,9 +6,9 @@
     padding: 50px 15px;
  
     @include for-large-up {
+        height: 983px;
         background-color: $background-blue-sky;
         margin: auto;   
-        // margin-top: 108px;
         padding: 0;
         width: 100%;
     }
@@ -68,6 +68,7 @@ text-align: center;
     }
 
     @include for-large-up  {
+
         margin-top: 34px;
     }
 }
@@ -84,6 +85,7 @@ text-align: center;
     margin-top: 12px;
 
    @include for-large-up {
+    padding: 0;
     margin:0;
     margin-left: 10px ;
     width: 158px;
@@ -130,6 +132,7 @@ text-align: center;
     font-size: 22px;
     line-height: 28px;
     margin-top: 22px;
+    margin-bottom: 33px;
     text-align: center;
 }
 
