--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -1,3 +1,7 @@
 $font-color-opacity: rgba(43, 41, 45, 0.6);
 $main-font-color: rgba(43, 41, 45);
-$background-blue-sky: rgba(0, 161, 198, 0.07);;
+$background-blue-sky: rgba(0, 161, 198, 0.07);
+$button-color: #3040c4;
+$text-color: #2b292d;
+$white: #fff;
+$hover-link: #3141c5;
