--- a/styles/audience.scss
+++ b/styles/audience.scss
@@ -2,37 +2,36 @@
 @import 'variables.scss';
 
 .audience {
+  background-color: $background-blue-sky;
+  padding: 50px 15px;
+
+  @include for-large-up {
+    height: 983px;
     background-color: $background-blue-sky;
-    padding: 50px 15px;
- 
-    @include for-large-up {
-        height: 983px;
-        background-color: $background-blue-sky;
-        margin: auto;   
-        padding: 0;
-        width: 100%;
-    }
+    margin: auto;
+    padding: 0;
+    width: 100%;
+  }
 
-    
-&__details {
+  &__details {
     @include for-large-up {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        max-width: 555px;
-        margin: 108px auto 0 auto;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      max-width: 555px;
+      margin: 108px auto 0 auto;
     }
-}
+  }
 
-&__title {
+  &__title {
     margin: 0;
     font-weight: 700;
     font-size: 22px;
     line-height: 34px;
     text-align: center;
-}
+  }
 
-&__subtitle {
+  &__subtitle {
     margin: 0;
     margin-top: 17px;
     font-weight: 700;
@@ -44,36 +43,35 @@
       font-size: 56px;
       margin-top: 24px;
       line-height: 56px;
-      letter-spacing: -0.5px;  
+      letter-spacing: -0.5px;
     }
-}
+  }
 
-&__description {
- margin: 0;
-margin-top: 18px;
-font-size: 24px;
-line-height: 34px;
-text-align: center;
- @include for-large-up {
-    margin-top: 30px;
- }
-}
+  &__description {
+    margin: 0;
+    margin-top: 18px;
+    font-size: 24px;
+    line-height: 34px;
+    text-align: center;
+    @include for-large-up {
+      margin-top: 30px;
+    }
+  }
 
-&__buttons {
+  &__buttons {
     padding: 0;
-    
+
     @include for-down-up {
-        width: 100%;
-        margin-top: 30px;
+      width: 100%;
+      margin-top: 30px;
     }
 
-    @include for-large-up  {
-
-        margin-top: 34px;
+    @include for-large-up {
+      margin-top: 34px;
     }
-}
+  }
 
-&__learn-more-button {
+  &__learn-more-button {
     background-color: #fff;
     color: #000000;
     width: 100%;
@@ -83,68 +81,82 @@ text-align: center;
     border-radius: 2px;
     border: none;
     margin-top: 12px;
-
-   @include for-large-up {
-    padding: 0;
-    margin:0;
-    margin-left: 10px ;
-    width: 158px;
-   }
-} 
-
-&__users-card {
+    cursor: pointer;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1), 0px 4px 6px rgba(0, 0, 0, 0.05),
+      inset 0px 1px 0px rgba(255, 255, 255, 0.1);
     @include for-large-up {
-     display: flex;
-     align-items: center;
-     justify-content: center;
-     margin-top: 111px;
-     margin-bottom: 110px;;
+      padding: 0;
+      margin: 0;
+      margin-left: 10px;
+      width: 158px;
     }
-}
-}
+  }
 
+  &__users-card {
+    @include for-large-up {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      margin-top: 111px;
+      margin-bottom: 110px;
+    }
+  }
+}
 
 .user-card {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: #fff;
-    width: 290px;
-    height: 300px;
-    margin-top: 15px;
-    border-radius: 8px;
-    @include for-large-up {
-    
-     width: 262px;
-     margin: 0;
-     margin-right: 30px;
-     cursor: pointer;
-    }
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: $white;
+  width: 290px;
+  height: 300px;
+  margin-top: 15px;
+  border-radius: 8px;
+  padding-top: 22px;
+  background: linear-gradient(180deg, rgba(255, 255, 255, 0.05) 0%, rgba(255, 255, 255, 1e-5) 100%),
+    #ffffff;
+  background-blend-mode: overlay, normal;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1), 0px 4px 6px rgba(0, 0, 0, 0.05),
+    inset 0px 1px 0px rgba(255, 255, 255, 0.1);
+  @include for-large-up {
+    width: 262px;
+    margin: 0;
+    margin-bottom: 0px;
+    margin-top: 0px;
+    margin-right: 30px;
+    cursor: pointer;
+  }
 
-    &:hover {
-    background-color:#3141C5;
+  &:hover {
+    background-color: $hover-link;
     box-shadow: 0px 13px 18px rgba(0, 0, 0, 0.15), 0px 11px 55px rgba(0, 0, 0, 0.07);
-}
 
+    &__images {
+      padding: 22px;
+    }
+  }
 
-&__caption {
+  &__caption {
     font-weight: 700;
     font-size: 22px;
     line-height: 28px;
     margin-top: 22px;
     margin-bottom: 33px;
     text-align: center;
-}
+  }
 
- &:hover &__caption {
+  &:hover &__caption {
     color: #fff;
- }
+  }
 }
 
 .developer {
-    margin-top: 40px;
+  margin-top: 40px;
+  @include for-large-up {
+    margin-top: 0px;
+  }
 }
 
 .creators {
-    margin-right: 0;
+  margin-right: 0;
 }
