--- a/styles/common.scss
+++ b/styles/common.scss
@@ -1,19 +1,23 @@
 @import 'breakpoints.scss';
 @import 'variables.scss';
 
+
 .action-button {
-  background-color: #3040c4;
-  color: #fff;
+  background-color: $button-color;
+  color: $white;
   width: 100%;
   height: 48px;
   font-size: 18px;
   font-weight: 700;
   border: none;
   border-radius: 2px;
+  cursor: pointer;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1), 0px 4px 6px rgba(0, 0, 0, 0.05), inset 0px 1px 0px rgba(255, 255, 255, 0.1);
 }
 
 .action-button {
   width: 100%;
+  cursor: pointer;
   @include for-large-up {
     padding: 0;
     width: 160px;
