--- a/styles/header.scss
+++ b/styles/header.scss
@@ -1,12 +1,13 @@
 @import 'breakpoints.scss';
 @import 'variables.scss';
 
+
 .header {
   display: flex;
   align-items: center;
   height: 64px;
   width: 100%;
-  background-color: #fff;
+  background-color: $white;
   padding-left: 15px;
   @include for-large-up {
     display: flex;
@@ -20,6 +21,7 @@
     display: none;
     @include for-large-up {
       display: block;
+      cursor: pointer;
     }
   }
 
@@ -28,7 +30,6 @@
     height: 100%;
     border: none;
     border-left: 1px solid #00000026;
-
     margin-left: auto;
     background-color: transparent;
 
@@ -129,8 +130,8 @@
 
 .top-section {
   background-color: #f3c6bd;
-  padding-bottom: 35px;
   @include for-large-up {
     padding-top: 39px;
+    padding-bottom: 0px;
   }
 }
