--- a/styles/headline.scss
+++ b/styles/headline.scss
@@ -1,6 +1,7 @@
 @import 'breakpoints.scss';
 @import 'variables.scss';
 
+
 .headline {
   margin: 0;
   width: 100%;
@@ -72,8 +73,8 @@
   }
 
   &__learn-more-button {
-    background-color: #fff;
-    color: #3040c4;
+    background-color: $white;
+    color: $button-color;
     width: 158px;
     height: 48px;
     font-size: 18px;
@@ -81,6 +82,8 @@
     border: none;
     border-radius: 2px;
     margin-top: 15px;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1), 0px 4px 6px rgba(0, 0, 0, 0.05), inset 0px 1px 0px rgba(255, 255, 255, 0.1);
+    cursor: pointer;
     @include for-large-up {
       margin-left: 10px;
       margin-top: 0;
@@ -98,6 +101,7 @@
       width: 796px;
       height: 448px;
       margin-left: auto;
+      margin-bottom: 0px;
     }
   }
 
