--- a/style.css
+++ b/style.css
@@ -10,15 +10,32 @@
   cursor: pointer;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1), 0px 4px 6px rgba(0, 0, 0, 0.05), inset 0px 1px 0px rgba(255, 255, 255, 0.1);
 }
-
-.action-button {
-  width: 100%;
-  cursor: pointer;
-}
 @media screen and (min-width: 1400px) {
   .action-button {
     padding: 0;
     width: 160px;
+  }
+}
+
+.learn-more-button {
+  background-color: #fff;
+  color: #000000;
+  width: 100%;
+  height: 48px;
+  font-size: 18px;
+  font-weight: 700;
+  border-radius: 2px;
+  border: none;
+  margin-top: 12px;
+  cursor: pointer;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1), 0px 4px 6px rgba(0, 0, 0, 0.05), inset 0px 1px 0px rgba(255, 255, 255, 0.1);
+}
+@media screen and (min-width: 1400px) {
+  .learn-more-button {
+    padding: 0;
+    margin: 0;
+    margin-left: 10px;
+    width: 158px;
   }
 }
 
@@ -449,25 +466,6 @@
     flex-direction: row;
   }
 }
-.headline__learn-more-button {
-  background-color: #fff;
-  color: #3040c4;
-  width: 158px;
-  height: 48px;
-  font-size: 18px;
-  font-weight: 700;
-  border: none;
-  border-radius: 2px;
-  margin-top: 15px;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1), 0px 4px 6px rgba(0, 0, 0, 0.05), inset 0px 1px 0px rgba(255, 255, 255, 0.1);
-  cursor: pointer;
-}
-@media screen and (min-width: 1400px) {
-  .headline__learn-more-button {
-    margin-left: 10px;
-    margin-top: 0;
-  }
-}
 .headline__banner {
   width: 100%;
   margin-bottom: 36px;
@@ -481,17 +479,6 @@
     height: 448px;
     margin-left: auto;
     margin-bottom: 0px;
-  }
-}
-@media screen and (max-width: 1399px) {
-  .headline__action-button {
-    width: 100%;
-  }
-}
-
-@media screen and (max-width: 1399px) {
-  .action-button {
-    width: 100%;
   }
 }
 
@@ -551,7 +538,7 @@
   height: 48px;
   width: 100%;
   margin-top: 40px;
-  background: #ffffff;
+  background: #fff;
   border: 1px solid rgba(43, 41, 45, 0.2);
   border-radius: 2px;
   font-size: 18px;
@@ -598,6 +585,59 @@
 }
 .order__terms-link {
   color: #3141c5;
+}
+
+.action-button {
+  background-color: #3040c4;
+  color: #fff;
+  width: 100%;
+  height: 48px;
+  font-size: 18px;
+  font-weight: 700;
+  border: none;
+  border-radius: 2px;
+  cursor: pointer;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1), 0px 4px 6px rgba(0, 0, 0, 0.05), inset 0px 1px 0px rgba(255, 255, 255, 0.1);
+}
+@media screen and (min-width: 1400px) {
+  .action-button {
+    padding: 0;
+    width: 160px;
+  }
+}
+
+.learn-more-button {
+  background-color: #fff;
+  color: #000000;
+  width: 100%;
+  height: 48px;
+  font-size: 18px;
+  font-weight: 700;
+  border-radius: 2px;
+  border: none;
+  margin-top: 12px;
+  cursor: pointer;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1), 0px 4px 6px rgba(0, 0, 0, 0.05), inset 0px 1px 0px rgba(255, 255, 255, 0.1);
+}
+@media screen and (min-width: 1400px) {
+  .learn-more-button {
+    padding: 0;
+    margin: 0;
+    margin-left: 10px;
+    width: 158px;
+  }
+}
+
+@media screen and (min-width: 1400px) {
+  .hide-desktop {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 1399px) {
+  .hide-mobile {
+    display: none;
+  }
 }
 
 .audience {
@@ -672,27 +712,6 @@
     margin-top: 34px;
   }
 }
-.audience__learn-more-button {
-  background-color: #fff;
-  color: #000000;
-  width: 100%;
-  height: 48px;
-  font-size: 18px;
-  font-weight: 700;
-  border-radius: 2px;
-  border: none;
-  margin-top: 12px;
-  cursor: pointer;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1), 0px 4px 6px rgba(0, 0, 0, 0.05), inset 0px 1px 0px rgba(255, 255, 255, 0.1);
-}
-@media screen and (min-width: 1400px) {
-  .audience__learn-more-button {
-    padding: 0;
-    margin: 0;
-    margin-left: 10px;
-    width: 158px;
-  }
-}
 @media screen and (min-width: 1400px) {
   .audience__users-card {
     display: flex;
@@ -713,7 +732,7 @@
   margin-top: 15px;
   border-radius: 8px;
   padding-top: 22px;
-  background: linear-gradient(180deg, rgba(255, 255, 255, 0.05) 0%, rgba(255, 255, 255, 0.00001) 100%), #ffffff;
+  background: linear-gradient(180deg, rgba(255, 255, 255, 0.05) 0%, rgba(255, 255, 255, 0.00001) 100%), #fff;
   background-blend-mode: overlay, normal;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1), 0px 4px 6px rgba(0, 0, 0, 0.05), inset 0px 1px 0px rgba(255, 255, 255, 0.1);
 }
