--- a/styles/audience.scss
+++ b/styles/audience.scss
@@ -1,5 +1,6 @@
 @import 'breakpoints.scss';
 @import 'variables.scss';
+@import 'common.scss';
 
 .audience {
   background-color: $background-blue-sky;
@@ -71,27 +72,6 @@
     }
   }
 
-  &__learn-more-button {
-    background-color: #fff;
-    color: #000000;
-    width: 100%;
-    height: 48px;
-    font-size: 18px;
-    font-weight: 700;
-    border-radius: 2px;
-    border: none;
-    margin-top: 12px;
-    cursor: pointer;
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1), 0px 4px 6px rgba(0, 0, 0, 0.05),
-      inset 0px 1px 0px rgba(255, 255, 255, 0.1);
-    @include for-large-up {
-      padding: 0;
-      margin: 0;
-      margin-left: 10px;
-      width: 158px;
-    }
-  }
-
   &__users-card {
     @include for-large-up {
       display: flex;
@@ -114,7 +94,7 @@
   border-radius: 8px;
   padding-top: 22px;
   background: linear-gradient(180deg, rgba(255, 255, 255, 0.05) 0%, rgba(255, 255, 255, 1e-5) 100%),
-    #ffffff;
+    $white;
   background-blend-mode: overlay, normal;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1), 0px 4px 6px rgba(0, 0, 0, 0.05),
     inset 0px 1px 0px rgba(255, 255, 255, 0.1);
@@ -146,7 +126,7 @@
   }
 
   &:hover &__caption {
-    color: #fff;
+    color: $white;
   }
 }
 
