--- a/styles/common.scss
+++ b/styles/common.scss
@@ -13,16 +13,32 @@
   border-radius: 2px;
   cursor: pointer;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1), 0px 4px 6px rgba(0, 0, 0, 0.05), inset 0px 1px 0px rgba(255, 255, 255, 0.1);
-}
-
-.action-button {
-  width: 100%;
-  cursor: pointer;
   @include for-large-up {
     padding: 0;
     width: 160px;
   }
 }
+
+.learn-more-button {
+    background-color: $white;
+    color: $black;
+    width: 100%;
+    height: 48px;
+    font-size: 18px;
+    font-weight: 700;
+    border-radius: 2px;
+    border: none;
+    margin-top: 12px;
+    cursor: pointer;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1), 0px 4px 6px rgba(0, 0, 0, 0.05),
+      inset 0px 1px 0px rgba(255, 255, 255, 0.1);
+    @include for-large-up {
+      padding: 0;
+      margin: 0;
+      margin-left: 10px;
+      width: 158px;
+    }
+  }
 
 .hide-desktop {
   @include for-large-up {
