--- a/styles/footer.scss
+++ b/styles/footer.scss
@@ -23,7 +23,7 @@
   &__line {
     width: 100%;
     opacity: 0.1;
-    border-top: 1px solid #2b292d;
+    border-top: 1px solid $text-color;
     margin: 0;
     margin-top: 40px;
 
