--- a/styles/order.scss
+++ b/styles/order.scss
@@ -2,7 +2,7 @@
 @import 'variables.scss';
 
 .order {
-  background-color: #f4f5f7;
+  background-color: $light-blue-background;
   padding: 50px 15px;
 
   @include for-large-up {
@@ -64,7 +64,7 @@
     height: 48px;
     width: 100%;
     margin-top: 40px;
-    background: #ffffff;
+    background: $white;
     border: 1px solid rgba(43, 41, 45, 0.2);
     border-radius: 2px;
     font-size: 18px;
