--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -5,3 +5,5 @@ $button-color: #3040c4;
 $text-color: #2b292d;
 $white: #fff;
 $hover-link: #3141c5;
+$black: #000000;
+$light-blue-background:#f4f5f7;
