--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -6,4 +6,6 @@ $text-color: #2b292d;
 $white: #fff;
 $hover-link: #3141c5;
 $black: #000000;
-$light-blue-background:#f4f5f7;
+$light-blue-background: #f4f5f7;
+$background-pink: #f3c6bd;
+$border-line: #00000026;
