--- a/styles/audience.scss
+++ b/styles/audience.scss
@@ -7,11 +7,11 @@
   padding: 50px 15px;
 
   @include for-large-up {
+    width: 100%;
     height: 983px;
     background-color: $background-blue-sky;
     margin: auto;
     padding: 0;
-    width: 100%;
   }
 
   &__details {
@@ -27,8 +27,8 @@
   &__title {
     margin: 0;
     font-weight: 700;
-    font-size: 22px;
     line-height: 34px;
+    font-size: 22px;
     text-align: center;
   }
 
@@ -36,13 +36,13 @@
     margin: 0;
     margin-top: 17px;
     font-weight: 700;
-    font-size: 40px;
     line-height: 40px;
+    font-size: 40px;
     text-align: center;
     letter-spacing: -0.357143px;
     @include for-large-up {
-      font-size: 56px;
       margin-top: 24px;
+      font-size: 56px;
       line-height: 56px;
       letter-spacing: -0.5px;
     }
@@ -51,8 +51,8 @@
   &__description {
     margin: 0;
     margin-top: 18px;
-    font-size: 24px;
     line-height: 34px;
+    font-size: 24px;
     text-align: center;
     @include for-large-up {
       margin-top: 30px;
@@ -60,15 +60,13 @@
   }
 
   &__buttons {
+    width: 100%;
     padding: 0;
-
-    @include for-down-up {
-      width: 100%;
-      margin-top: 30px;
-    }
+    margin-top: 30px;
 
     @include for-large-up {
       margin-top: 34px;
+      margin-left: 227px;
     }
   }
 
@@ -88,13 +86,13 @@
   align-items: center;
   justify-content: center;
   background-color: $white;
+  background: linear-gradient(180deg, rgba(255, 255, 255, 0.05) 0%, rgba(255, 255, 255, 1e-5) 100%),
+    $white;
   width: 290px;
   height: 300px;
   margin-top: 15px;
-  border-radius: 8px;
   padding-top: 22px;
-  background: linear-gradient(180deg, rgba(255, 255, 255, 0.05) 0%, rgba(255, 255, 255, 1e-5) 100%),
-    $white;
+  border-radius: 8px;
   background-blend-mode: overlay, normal;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1), 0px 4px 6px rgba(0, 0, 0, 0.05),
     inset 0px 1px 0px rgba(255, 255, 255, 0.1);
@@ -118,8 +116,8 @@
 
   &__caption {
     font-weight: 700;
-    font-size: 22px;
     line-height: 28px;
+    font-size: 22px;
     margin-top: 22px;
     margin-bottom: 33px;
     text-align: center;
