--- a/styles/headline.scss
+++ b/styles/headline.scss
@@ -2,9 +2,8 @@
 @import 'variables.scss';
 
 .headline {
-  margin: 0;
   width: 100%;
-
+  margin: 0;
   @include for-large-up {
     display: flex;
     position: relative;
@@ -24,11 +23,12 @@
   }
 
   &__title {
+    margin: 0;
     font-weight: 700;
     font-size: 50px;
     line-height: 50px;
     letter-spacing: -0.3125px;
-    margin: 0;
+
     @include for-large-up {
       width: 754px;
       height: 165px;
@@ -49,10 +49,10 @@
     z-index: 1;
 
     @include for-large-up {
+      width: 456px;
+      height: 102px;
       margin-top: 34px;
       margin-bottom: 0;
-      height: 102px;
-      width: 456px;
       font-size: 24px;
       line-height: 34px;
       z-index: 1;
@@ -65,9 +65,9 @@
     margin-top: 30px;
 
     @include for-large-up {
-      margin-top: 58px;
       display: flex;
       flex-direction: row;
+      margin-top: 58px;
     }
   }
 
@@ -77,12 +77,16 @@
 
     @include for-large-up {
       position: relative;
-      right: -105px;
-      top: 0;
       width: 796px;
       height: 448px;
       margin-left: auto;
       margin-bottom: 0px;
+      right: -105px;
+      top: 0;
     }
   }
+}
+
+.headline__learn-more-button {
+  color: $button-color;
 }
