--- a/styles/footer.scss
+++ b/styles/footer.scss
@@ -31,8 +31,9 @@
     }
   }
   .logo {
-    @include for-down-up {
-      display: none;
+    display: none;
+    @include for-large-up {
+      display: block;
     }
   }
 }
